--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
     <pre><code>@article{kang2024diffusion2gan,
   author    = {Kang, Minguk and Zhang, Richard and Barnes, Connelly and Paris, Sylvain and Kwak, Suha and Park, Jaesik and Shechtman, Eli and Zhu, Jun-Yan and Park, Taesung},
   title     = {{Distilling Diffusion Models into Conditional GANs}},
-  journal={},
+  journal   = {arXiv preprint arXiv:2405.05967},
   year      = {2024},
 }</code></pre>
   </div>
