add human evaluation

--- a/index.html
+++ b/index.html
@@ -155,27 +155,19 @@
       </div>
       <div id="results-carousel" class="carousel results-carousel">
         <div class="item item-t2i0">
-          <img id="myt2i0" src="./static/images/ode_learning.png"
+          <img id="myt2i0" src="./static/images/ODE_learning0.png"
           class="interpolation-image"/>
         </div>
         <div class="item item-t2i0">
-        <img id="myt2i0" src="./static/images/ode_learning3.png"
+        <img id="myt2i0" src="./static/images/ODE_learning1.png"
         class="interpolation-image"/>
       </div>
       <div class="item item-t2i0">
-        <img id="myt2i0" src="./static/images/ode_learning4.png"
+        <img id="myt2i0" src="./static/images/ODE_learning2.png"
         class="interpolation-image"/>
       </div>
         <div class="item item-t2i1">
-          <img id="myt2i1" src="./static/images/ode_learning1.png"
-          class="interpolation-image"/>
-        </div>
-        <div class="item item-t2i1">
-          <img id="myt2i1" src="./static/images/ode_learning2.png"
-          class="interpolation-image"/>
-        </div>
-        <div class="item item-t2i1">
-          <img id="myt2i1" src="./static/images/ode_learning5.png"
+          <img id="myt2i1" src="./static/images/ODE_learning3.png"
           class="interpolation-image"/>
         </div>
       </div>
@@ -380,6 +372,7 @@
           </p>
           <br>
         </div>
+
         <!-- Prompt Interpolation image -->
         <h3 class="title is-4">COCO2014 benchmark (Stable Diffusion 1.5)</h3>
         
@@ -396,6 +389,19 @@
         </div>
         <div class="content has-text-justified">
         </div>
+
+        <!-- Prompt Interpolation image -->
+        <h3 class="title is-4">Human preference study</h3>
+        <div class="content has-text-centered">
+            <img src="./static/images/human_evaluation.png" width="100%">
+        </div>
+        <div class="content has-text-justified">
+          <p>
+            We conduct a human preference study. <b>SD1.5-Diffusion2GAN</b> produces more realistic images with better text-to-image alignment compared to <b>InstaFlow-0.9B</b>. In SDXL distillation, <b>SDXL-Diffusion2GAN</b> shows superior realism and alignment compared to <b>SDXL-Turbo</b> and <b>SDXL-Lightning</b>. However, unlike COCO2014 and COCO2017, human preference favors teacher diffusion models. We leave developing a better evaluation metric for future work.
+          </p>
+          <br>
+        </div>
+
       </div>
     </div>
 
