--- a/index.html
+++ b/index.html
@@ -93,13 +93,13 @@
           </div>
 
           <div class="is-size-5 publication-venue">
-            in arXiv 2024
+            in ECCV 2024
           </div>
 
           <div class="column has-text-centered">
             <div class="publication-links">
               <span class="link-block">
-                <a href="static/paper/diffusion2gan_arxiv.pdf"
+                <a href="static/paper/diffusion2gan_arxiv_v2.pdf"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
@@ -498,10 +498,10 @@
 <section class="section" id="BibTeX">
   <div class="container is-max-desktop content">
     <h2 class="title"><a id="bibtex">BibTeX</a></h2>
-    <pre><code>@article{kang2024diffusion2gan,
+    <pre><code>@inproceedings{kang2024diffusion2gan,
   author    = {Kang, Minguk and Zhang, Richard and Barnes, Connelly and Paris, Sylvain and Kwak, Suha and Park, Jaesik and Shechtman, Eli and Zhu, Jun-Yan and Park, Taesung},
   title     = {{Distilling Diffusion Models into Conditional GANs}},
-  journal   = {arXiv preprint arXiv:2405.05967},
+  booktitle   = {European Conference on Computer Vision (ECCV)},
   year      = {2024},
 }</code></pre>
   </div>
