--- a/index.html
+++ b/index.html
@@ -118,12 +118,12 @@
               </span>
               <!-- Code Link. -->
               <span class="link-block">
-                <a href="https://github.com/mingukkang/Diffusion2GAN/tree/main/evaluation"
+                <a href="https://github.com/mingukkang/elatentlpips"
                    class="external-link button is-normal is-rounded is-dark">
                   <span class="icon">
                       <i class="fab fa-github"></i>
                   </span>
-                  <span>Evaluation</span>
+                  <span>E-LatentLPIPS</span>
                   </a>
               </span>
               <span class="link-block">
