--- a/index.html
+++ b/index.html
@@ -126,6 +126,25 @@
                   <span>E-LatentLPIPS</span>
                   </a>
               </span>
+              <!-- Video Link. -->
+              <span class="link-block">
+                <a href="https://www.youtube.com/watch?v=nHav5H4uBgA"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fab fa-youtube"></i>
+                  </span>
+                  <span>Two Minute Papers</span>
+                </a>
+              </span>
+              <span class="link-block">
+                <a href="static/slides/[PPT]Diffusion2GAN.pdf"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                  </span>
+                  <span>slides</span>
+                </a>
+              </span>
               <span class="link-block">
                 <a href="#bibtex"
                    class="external-link button is-normal is-rounded is-dark">
