--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
                   <span class="icon">
                       <i class="fab fa-youtube"></i>
                   </span>
-                  <span>Two Minute Papers</span>
+                  <span>Video</span>
                 </a>
               </span>
               <span class="link-block">
@@ -142,7 +142,16 @@
                   <span class="icon">
                       <i class="fas fa-file-pdf"></i>
                   </span>
-                  <span>slides</span>
+                  <span>Slides</span>
+                </a>
+              </span>
+              <span class="link-block">
+                <a href="static/slides/[poster]Diffusion2GAN.pdf"
+                   class="external-link button is-normal is-rounded is-dark">
+                  <span class="icon">
+                      <i class="fas fa-file-pdf"></i>
+                  </span>
+                  <span>Poster</span>
                 </a>
               </span>
               <span class="link-block">
